# IFS-fractals

./: .gitignore  CMakeLists.txt  README.md  scene.yml
headers/: GameLayer.h  Ifs2D.h  Ifs3D.h
res/scripts/: CMakeLists.txt
res/scripts/headers/: IFS.h  Ifs2D.h  Ifs3D.h
res/scripts/includes/: uuids.h
res/scripts/src/: IFS.cpp
res/shaders/: Ifs.comp  Ifs3D.comp  IfsTransfer.comp  RaymarchVolume.comp
res/textures/env_map/: diffuse_prefilter_preview-sky.hdr_0.hdr  diffuse_prefilter_preview-sky.hdr_1.hdr  diffuse_prefilter_preview-sky.hdr_2.hdr  diffuse_prefilter_preview-sky.hdr_3.hdr  diffuse_prefilter_preview-sky.hdr_4.hdr  diffuse_prefilter_preview-sky.hdr_5.hdr
src/: GameLayer.cpp  Ifs2D.cpp  Ifs3D.cpp  main.cpp
